--- a/.github/workflows/run-clojure-tests.yml
+++ b/.github/workflows/run-clojure-tests.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Install JDK 24
         run: sudo apt install ./jdk-24_linux-x64_bin.deb
 
+      - name: Check java version
+        run: java --version
+
       - name: Clojure install, download
         run: curl -L -O https://github.com/clojure/brew-install/releases/latest/download/posix-install.sh
 
