datomic: github actions wip

--- a/.github/workflows/run-clojure-tests.yml
+++ b/.github/workflows/run-clojure-tests.yml
@@ -43,6 +43,9 @@ jobs:
             ~/.gitlibs
           key: ${{ runner.os }}-deps-edn-${{ hashFiles('**/deps.edn') }}
 
+      - name: Datomic background
+        run: bash -c "cd datomic; clojure -M:dpm up" &
+
       - name: Run 'clojure -X:dev:add-opens:test-runner'
         run: clojure -X:dev:add-opens:test-runner
 
